--- a/Container-Start.yaml
+++ b/Container-Start.yaml
@@ -15,7 +15,7 @@
 
   - name: Running the container
     docker_container:
-      image: gvenkat/ulearnwebapp:latest
+      image: ayyappa94/webapp:latest
       name: webapp
       # path: docker
       state: started
